--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -15,6 +15,9 @@
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
+repositories {
+    maven { url = 'https://jitpack.io' }
+}
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
 
@@ -25,4 +28,5 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.2-ALPHA'
 }
