super simple swerve stuff

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -30,4 +30,5 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.2-ALPHA'
+    implementation project(':library')
 }
