--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -18,6 +18,7 @@ apply plugin: 'kotlin-android'
 
 repositories {
     maven { url = 'https://jitpack.io' }
+    mavenLocal()
 }
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -30,4 +31,5 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.2-ALPHA'
+    implementation 'sigmacorns:library:0.1a'
 }
