--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -77,13 +77,14 @@ project.afterEvaluate {
 dependencies {
     implementation project(':FtcRobotController')
     implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.2-ALPHA'
-    implementation ("net.unnamedrobotics:library:1.0.29f@aar")
+    implementation ("net.unnamedrobotics:library:1.0.29g@aar")
     implementation 'dev.nullrobotics:choreolib:0.04'
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.0")
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     implementation "org.joml:joml:1.10.8"
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'com.github.kwhat:jnativehook:2.2.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
