fix(io): make io thread stop properly

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -70,6 +70,7 @@ android {
 
 project.afterEvaluate {
     tasks.withType(Test).configureEach {
+        //TODO: FIX THIS TO BE RELATIVE
         it.systemProperty("java.library.path","C:\\Users\\chemi\\Documents\\dev\\library\\library\\build\\rustJniLibs\\desktop\\win32-x86-64")
     }
 }
