--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -98,6 +98,7 @@ tasks.register("compileNativeLib", Exec) {
 
 tasks.withType(Test).configureEach {
     dependsOn "compileNativeLib"
+
     doFirst {
         def libPath = file("src/main/cpp/build/Debug/").absolutePath
         System.setProperty("java.library.path", libPath)
@@ -114,7 +115,7 @@ project.afterEvaluate {
 dependencies {
     implementation project(':FtcRobotController')
     implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.2-ALPHA'
-    implementation ("net.unnamedrobotics:library:1.0.29n@aar")
+    implementation ("net.unnamedrobotics:library:1.0.29p@aar")
     implementation 'dev.nullrobotics:choreolib:0.04'
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.0")
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
@@ -122,6 +123,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.github.kwhat:jnativehook:2.2.2'
+    testImplementation 'com.github.strikerx3:jxinput:1.0.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
