--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -123,7 +123,7 @@ project.afterEvaluate {
 dependencies {
     implementation project(':FtcRobotController')
     implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.2-ALPHA'
-    implementation ("net.unnamedrobotics:library:1.0.29v@aar")
+    implementation ("net.unnamedrobotics:library:w0@aar")
     implementation 'dev.nullrobotics:choreolib:0.04'
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.0")
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
